add new website from server na

--- a/xem-phim-bo/chien-luoc-hon-nhan/index.html
+++ b/xem-phim-bo/chien-luoc-hon-nhan/index.html
@@ -1190,7 +1190,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             5
+             7
             </dd>
             <br/>
            </dl>
@@ -1551,7 +1551,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lust, Caution
             </span>
             <span class="list-top-movie-item-view">
-             65 lượt xem
+             67 lượt xem
             </span>
             <span class="rate-vote rate-vote-10">
             </span>
@@ -1573,7 +1573,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Dragon Hunting.Soul Suppressing Coffin
             </span>
             <span class="list-top-movie-item-view">
-             62 lượt xem
+             63 lượt xem
             </span>
             <span class="rate-vote rate-vote-10">
             </span>
@@ -1595,7 +1595,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Brothers For Life (Season 2)
             </span>
             <span class="list-top-movie-item-view">
-             53 lượt xem
+             54 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1617,7 +1617,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Angel Guts: Red Classroom
             </span>
             <span class="list-top-movie-item-view">
-             51 lượt xem
+             54 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1639,7 +1639,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              The Blood of Youth
             </span>
             <span class="list-top-movie-item-view">
-             51 lượt xem
+             52 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1660,18 +1660,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/15-thang-8" title="15 tháng 8">
+          <a class="list-top-movie-link" href="/phim-moi/sieu-nhoc-vu-tru-phan-3" title="Siêu nhóc vũ trụ (Phần 3)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/15-thang-8-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sieu-nhoc-vu-tru-phan-3-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             15 tháng 8
+             Siêu nhóc vũ trụ (Phần 3)
             </span>
             <span class="list-top-movie-item-en">
-             15 August
+             Kid Cosmic (Season 3)
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1682,18 +1682,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cuoc-chien-bo-rao" title="Cuộc chiến bờ rào">
+          <a class="list-top-movie-link" href="/phim-moi/cong-7" title="Cổng 7">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-chien-bo-rao-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cong-7-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cuộc chiến bờ rào
+             Cổng 7
             </span>
             <span class="list-top-movie-item-en">
-             Fenced In
+             Puerta 7
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1704,21 +1704,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/the-chien-ii-loi-ke-tu-tien-tuyen" title="Thế chiến II: Lời kể từ tiền tuyến">
+          <a class="list-top-movie-link" href="/phim-moi/doraemon-nobita-va-binh-doan-nguoi-sat" title="Doraemon: Nobita và Binh Đoàn Người Sắt">
            <span class="status">
-            Vietsub - HD Vietsub
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-chien-ii-loi-ke-tu-tien-tuyen-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/doraemon-nobita-va-binh-doan-nguoi-sat-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thế chiến II: Lời kể từ tiền tuyến
+             Doraemon: Nobita và Binh Đoàn Người Sắt
             </span>
             <span class="list-top-movie-item-en">
-             World War II: From the Frontlines
+             Doraemon: Nobita and the New Steel Troops: Angel Wings
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1726,18 +1726,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/lai-mot-mua-giang-sinh" title="Lại Một Mùa Giáng Sinh">
+          <a class="list-top-movie-link" href="/phim-moi/doi-dac-cong-cung-nguyen" title="Đội Đặc Công Cung Nguyên">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lai-mot-mua-giang-sinh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/doi-dac-cong-cung-nguyen-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Lại Một Mùa Giáng Sinh
+             Đội Đặc Công Cung Nguyên
             </span>
             <span class="list-top-movie-item-en">
-             Christmas As Usual
+             Route
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1748,21 +1748,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cam-y-chi-ha" title="Cẩm Y Chi Hạ">
+          <a class="list-top-movie-link" href="/phim-moi/thanh-vat-cua-quy" title="Thánh Vật Của Quỷ">
            <span class="status">
-            HD Vietsub + Thuyết minh
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cam-y-chi-ha-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thanh-vat-cua-quy-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cẩm Y Chi Hạ
+             Thánh Vật Của Quỷ
             </span>
             <span class="list-top-movie-item-en">
-             Under the Power
+             Consecration
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             5 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
