add new website from server na

--- a/xem-phim-bo/giang-thanh-quy-su/index.html
+++ b/xem-phim-bo/giang-thanh-quy-su/index.html
@@ -1193,7 +1193,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             6
+             7
             </dd>
             <br/>
            </dl>
@@ -1718,84 +1718,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/xin-chao-hoa-diem-lam" title="Xin Chào, Hỏa Diễm Lam">
-           <span class="status">
-            HD Vietsub + Thuyết minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/xin-chao-hoa-diem-lam-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Xin Chào, Hỏa Diễm Lam
-            </span>
-            <span class="list-top-movie-item-en">
-             The Flaming Heart
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/13-ly-do-tai-sao-phan-4" title="13 lý do tại sao (Phần 4)">
+          <a class="list-top-movie-link" href="/phim-moi/nguoi-cha-tuyet-voi" title="Người Cha Tuyệt Vời">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/13-ly-do-tai-sao-phan-4-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-cha-tuyet-voi-2009-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             13 lý do tại sao (Phần 4)
+             Người Cha Tuyệt Vời
             </span>
             <span class="list-top-movie-item-en">
-             13 Reasons Why (Season 4)
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/300-chien-binh-de-che-troi-day" title="300 Chiến Binh: Đế Chế Trỗi Dậy">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/300-chien-binh-de-che-troi-day-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             300 Chiến Binh: Đế Chế Trỗi Dậy
-            </span>
-            <span class="list-top-movie-item-en">
-             300: Rise of an Empire
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nu-sieu-nhan-phan-5" title="Nữ Siêu Nhân (Phần 5)">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nu-sieu-nhan-phan-5-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Nữ Siêu Nhân (Phần 5)
-            </span>
-            <span class="list-top-movie-item-en">
-             Supergirl (Season 5)
+             Everybody's Fine
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1806,21 +1740,87 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chien-ham-cuoi-cung-phan-4" title="Chiến Hạm Cuối Cùng (Phần 4)">
+          <a class="list-top-movie-link" href="/phim-moi/cap-doi-khac-tinh" title="Cặp Đôi Khắc Tinh">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chien-ham-cuoi-cung-phan-4-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cap-doi-khac-tinh-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Chiến Hạm Cuối Cùng (Phần 4)
+             Cặp Đôi Khắc Tinh
             </span>
             <span class="list-top-movie-item-en">
-             The Last Ship (Season 4)
+             Two Wrongs Make a Right
             </span>
             <span class="list-top-movie-item-view">
-             4 lượt xem
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/tim-goc" title="Tìm gốc">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tim-goc-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Tìm gốc
+            </span>
+            <span class="list-top-movie-item-en">
+             Going Back to Where We Were
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/quan-an-dem-nhung-cau-chuyen-o-tokyo-phan-2" title="Quán ăn đêm: Những câu chuyện ở Tokyo (Phần 2)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/quan-an-dem-nhung-cau-chuyen-o-tokyo-phan-2-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Quán ăn đêm: Những câu chuyện ở Tokyo (Phần 2)
+            </span>
+            <span class="list-top-movie-item-en">
+             Midnight Diner: Tokyo Stories (Season 2)
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/buoc-chan-dau-tien" title="Bước Chân Đầu Tiên">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/buoc-chan-dau-tien-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Bước Chân Đầu Tiên
+            </span>
+            <span class="list-top-movie-item-en">
+             First Man
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
