add new website from server na

--- a/xem-phim-moi/doraemon-nobita-va-ban-giao-huong-dia-cau/index.html
+++ b/xem-phim-moi/doraemon-nobita-va-ban-giao-huong-dia-cau/index.html
@@ -1197,7 +1197,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             17
+             18
             </dd>
             <br/>
            </dl>
@@ -1787,21 +1787,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/suc-manh-phep-thuat-cua-thanh-la-toan-nang" title="Sức mạnh phép thuật của Thánh là Toàn năng">
+          <a class="list-top-movie-link" href="/phim-moi/con-tin-2" title="Con Tin">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/suc-manh-phep-thuat-cua-thanh-la-toan-nang-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/con-tin-2018-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Sức mạnh phép thuật của Thánh là Toàn năng
+             Con Tin
             </span>
             <span class="list-top-movie-item-en">
-             聖女の魔力は万能です
+             Bel Canto
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1809,18 +1809,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cap-doi-dieu-tra" title="Cặp Đôi Điều Tra">
+          <a class="list-top-movie-link" href="/phim-moi/luat-su-ky-quac" title="Luật Sư Kỳ Quặc">
            <span class="status">
-            HD Thuyết Minh
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cap-doi-dieu-tra-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/luat-su-ky-quac-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cặp Đôi Điều Tra
+             Luật Sư Kỳ Quặc
             </span>
             <span class="list-top-movie-item-en">
-             Partners For Justice
+             My Lawyer, Mr. Jo
             </span>
             <span class="list-top-movie-item-view">
              4 lượt xem
@@ -1831,65 +1831,65 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cong-chua-toc-may" title="Công Chúa Tóc Mây">
+          <a class="list-top-movie-link" href="/phim-moi/cao-boi-copenhagen" title="Cao bồi Copenhagen">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cong-chua-toc-may-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cao-boi-copenhagen-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Công Chúa Tóc Mây
+             Cao bồi Copenhagen
             </span>
             <span class="list-top-movie-item-en">
-             Tangled
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/vu-an-gian-xao" title="Vụ Án Gian Xảo">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vu-an-gian-xao-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Vụ Án Gian Xảo
-            </span>
-            <span class="list-top-movie-item-en">
-             The Trials of Cate McCall
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tu-than-va-gai-quy" title="Tử Thần Và Gái Quỷ">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tu-than-va-gai-quy-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Tử Thần Và Gái Quỷ
-            </span>
-            <span class="list-top-movie-item-en">
-             Love Forever After
+             Copenhagen Cowboy
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/nao-loan-pho-bronx" title="Náo Loạn Phố Bronx">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nao-loan-pho-bronx-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Náo Loạn Phố Bronx
+            </span>
+            <span class="list-top-movie-item-en">
+             Rumble in the Bronx
+            </span>
+            <span class="list-top-movie-item-view">
+             5 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/dia-nguc-ngot-ngao-va-cay-dang" title="Địa Ngục Ngọt Ngào và Cay Đắng">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dia-nguc-ngot-ngao-va-cay-dang-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Địa Ngục Ngọt Ngào và Cay Đắng
+            </span>
+            <span class="list-top-movie-item-en">
+             Bitter Sweet Hell / Địa Ngục Ngọt Đắng
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
